<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.ProfileActivity">

    <!-- Botão Voltar -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/voltar"
        app:tint="@color/black" />



    <!-- Texto Descritivo para Nome -->
    <TextView
        android:id="@+id/descricao_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_nome"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Valor do Nome -->
    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_usuario"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/descricao_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Texto Descritivo para E-mail -->
    <TextView
        android:id="@+id/descricao_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_e_mail"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Valor do E-mail -->
    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example_com"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/descricao_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Botão Deletar Conta -->
    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/deletar_conta"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
